--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
     <title>Pies</title>
   </head>
   <body>
